typing in form issue on mobile dark mode

--- a/app/updates/updates.module.css
+++ b/app/updates/updates.module.css
@@ -62,7 +62,7 @@
 }
 
 .feedWrapper {
-  max-width: 800px;
+  max-width: 100%;
   margin: 0 auto;
 }
 
